test/files/neg/bug1523.check
bug1523.scala:4: error: wrong number of arguments for method bug: (Any)Any
  def go() = bug("a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a")
             ^
one error found
